Added a support for SKOS field names